Created thread logic for read rss.